# big_brother

./: .env  .gitignore  Cargo.toml
aims/: ya.yaml
config/: tg.yaml.tmpl
configs/: example.yaml  example2.yaml  ya.yaml
migrations/: 20210828182127_init.sql
src/: main.rs
src/slaves/: collector.rs  config_parser.rs  daemon.rs  fetchers.rs  mod.rs  notifier.rs  saver.rs  serializer.rs
src/slaves/clients/: custom_cookies.rs  mod.rs
src/slaves/clients/yandex/: client.rs
test/configs/: example.yaml  example2.yaml  example3.yaml
