[package]
name = "big_brother"
version = "0.1.0"
authors = ["Timofey Epanchintsev <epanchee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10" }
openssl-sys = { version = "0.9.65" }
reqwest = { version = "0.11.4", features = ["json"] }
tokio = { version = "1.7.0", features = ["full"] }
scraper = "0.12.0"
selectors = "0.23.0"
anyhow = "1.0.41"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.8.17"
pretty_assertions = "0.7.2"
async-recursion = "0.3.2"