[package]
name = "big_brother"
version = "0.1.0"
authors = ["Timofey Epanchintsev <epanchee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10" }
openssl-sys = { version = "0.9.65" }
reqwest = { version = "0.11", features = ["json", "cookies", "default-tls"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.12"
selectors = "0.23"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
pretty_assertions = "0.7"
async-recursion = "0.3"
bytes = "1"
cookie = "0.15"
cookie_store = "0.15"
futures = "0.3"
rutebot = "0.7"
async-trait = "0.1"
tokio-postgres = "0.7"
sqlx = { version = "0.5", features = [ "postgres", "runtime-tokio-native-tls" ] }
dotenv = "0"
